create a basic search form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   </head>
   <body>
     <h1>Hello, World!</h1>
+    <form id="movie-search-form">
+      <input type="search" id="movie-search-query"></input>
+      <input type="submit" value="Search"></input>
+    </form>
     <script type="text/javascript" src="js/lib/jquery.min.js"></script>
     <script type="text/javascript" src="js/lib/underscore.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
