update title and header to be "Movie Search"

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Movie Info - Powered by OMDB</title>
+    <title>Movie Search - Powered by OMDB</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Movie Search</h1>
     <form id="movie-search-form">
       <input type="search" id="movie-search-query"></input>
       <input type="submit" value="Search"></input>
