render movie results as a list

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       <input type="search" id="movie-search-query"></input>
       <input type="submit" value="Search"></input>
     </form>
+    <ol id="search-results"></ol>
+    <p id="error-message"></p>
     <script type="text/javascript" src="js/lib/jquery.min.js"></script>
     <script type="text/javascript" src="js/lib/underscore.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
